# gold

./: .gitignore  ANALYSIS_SUMMARY.txt  ANALYSIS_VIDEO_PRODUCTION_QUALITY.md  CONTENT_QUALITY_ANALYSIS.md  QUALITY_ANALYSIS_INDEX.md  README.md  README_YOUTUBE_ANALYSIS.md  SCRIPT_EXAMPLES_AND_FIXES.md  TRUECRIME_FACT_CHECK_REPORT.md  YOUTUBE_ACTION_PLAN.md  YOUTUBE_PERFORMANCE_ANALYSIS.md  YOUTUBE_QUICK_REFERENCE.txt  YOUTUBE_SUMMARY.txt  analyze_brightness.ps1  analyze_brightness.py  analyze_brightness_fast.py  analyze_brightness_parallel.py  brightness_report.txt  check_tiktok_status.py  final_summary.txt  post_all_today.py  post_ig_scheduled.py  post_scheduled.py  post_today.py  preflight_check.py  production_run.py  pyproject.toml  read_scripts.py  rerender_reddit_style.py  rerender_upgrades.py  run_analysis.cmd  test_dry_run.py  test_quality.py  test_upgrades.py  test_upgrades_reddit.py  update_scenes.py  update_scripts.py  verify_full.py  verify_updates.py  youtube_analytics.py  (+1 more)
config/: accounts.yaml  affiliate_links.yaml  settings.yaml
data/: dry_run_prompts.txt  dry_run_results.json  ig_long_token.txt  ig_token_coldcases.txt  ig_token_fluentin60.txt  ig_token_smartstack.txt  ig_token_storyvault.txt  ig_token_toolstack.txt  quality_report.txt  quality_test_log.txt  quality_test_log2.txt  quality_test_ltx23.txt  quality_test_ltx23_v2.txt  youtube_upload_results.json
docs/: channel_branding.md  new_channel_branding.md
remotion/: package-lock.json  package.json  tsconfig.json
scripts/: add_hook_cards.py  download_backgrounds.py  fix_bright_clips.py  (+13 more)
(+115 files in other folders)
